añadiendo nueva estrucutura con model y view

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
   ></script>
   <!-- Bootstrap -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-  <script src="index.js"></script>
+  <script src="./js/index.js" type="module"></script>
   <!-- JS Code -->
 </body>
 </html>
