--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <table class="table table-striped" id="table">
           <thead>
             <tr>
-              <th scope="col">Todo</th>
+              <th scope="col">Title</th>
               <th scope="col">Description</th>
               <th scope="col">Date</th>
               <th scope="col">
@@ -198,28 +198,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>
-                Learn JS
-              </td>
-              <td>
-                Watch Javascript tutorials on Youtube
-              </td>
-              <td>
-                Date
-              </td>
-              <td class="text-center">
-                <input type="checkbox">
-              </td>
-              <td class="text-right">
-                <button class="btn btn-primary mb-1">
-                  <i class="fa fa-pencil"></i>
-                </button>
-                <button class="btn btn-danger mb-1 ml-1">
-                  <i class="fa fa-trash"></i>
-                </button>
-              </td>
-            </tr>
+            <!-- contenido de la tabla -->
           </tbody>
         </table>
       </div>
