--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </a>
         </li>
       </ul>
-      <!-- <form class="form-inline my-2 my-lg-0" id="filters">
+      <form class="form-inline my-2 my-lg-0" id="filters">
         <label class="font-weight-bold text-info mr-3">Filters</label>
         <input type="radio" name="type" value="all" class="mx-1">
         <label for="male" class="mb-0">All</label>
@@ -62,13 +62,13 @@
         <button class="btn btn-outline-info my-2 my-sm-0" type="submit" id="search">
           Search
         </button>
-      </form> -->
+      </form>
     </div>
   </nav>
 
   <!-- Modal -->
   
-  <!-- <div
+  <div
     class="modal fade"
     id="modal"
     tabindex="-1"
@@ -80,7 +80,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">
-            Edit Todo
+            Edit Task
           </h5>
           <button
             type="button"
@@ -111,6 +111,15 @@
 
               </textarea>
             </div>
+            <div class="form-group">
+              <label>Date</label>
+              <input
+                id="modal-date"
+                type="datetime-local"
+                class="form-control"
+                placeholder="Do Something"
+              />
+            </div>
             <div class="form-group d-inline-flex">
               <label>Completed</label>
               <div class="mt-1 ml-2">
@@ -132,7 +141,7 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 
   <main>
     <div class="container pt-3">
